# quoter

./: .gitignore  Cargo.toml  README.md
poc/: poc.sh
src/: main.rs  quoter_config.rs  yahoo.rs
