[package]
name = "quoter"
version = "0.1.0"
authors = ["wrobbins"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json"] }
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
clap = { version = "*" }